# DeskNote

./: .gitignore  PLAN.md  README.md  package.json  vite.config.ts  vitest.config.ts
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
scripts/: close-m3-issues.mjs  close-m4-issues.mjs  create-issues.mjs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: db.ts
src/lib/__tests__/: db.test.ts
src/lib/components/: NoteEditor.svelte  SettingsPanel.svelte  Sidebar.svelte  TitleBar.svelte  TodoList.svelte  WorkLogCard.svelte
src/lib/stores/: notes.ts  settings.ts  todos.ts
src/lib/stores/__tests__/: notes.test.ts  todos.test.ts
src/routes/: +page.svelte
